<?xml version="1.0"?>
<package format="2">
  <name>incon_msgs</name>
  <version>0.0.0</version>
  <description>The incon_msgs package</description>

  <maintainer email="tim@incon.ai">Tim Sandy</maintainer>
  <maintainer email="fadri@incon.ai">Fadri Furrer</maintainer>
  <author>Tim Sandy</author>
  <author>Fadri Furrer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
